// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly in full size with max pages equal to total pages 1`] = `
.c0 {
  display: inline-block;
  padding: 16px 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 30px;
  cursor: point;
  background-color: #f04257;
  background: #f04257;
  color: #FFFFFF;
}

.c0:hover {
  background: #00beca;
}

<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link  c0"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link  c0"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item  item--disabled item--page"
    >
      <span
        className="link"
      >
        3
      </span>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link  c0"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link  c0"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with max pages less than total pages 1`] = `
.c0 {
  display: inline-block;
  padding: 16px 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 30px;
  cursor: point;
  background-color: #f04257;
  background: #f04257;
  color: #FFFFFF;
}

.c0:hover {
  background: #00beca;
}

<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item  item--disabled item--page"
    >
      <span
        className="link"
      >
        2
      </span>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link  c0"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link  c0"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 6"
        className="link  c0"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        6
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link  c0"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link  c0"
        color="red"
        href="example.com/page/10"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in full size with max pages more than total pages 1`] = `
.c0 {
  display: inline-block;
  padding: 16px 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 30px;
  cursor: point;
  background-color: #f04257;
  background: #f04257;
  color: #FFFFFF;
}

.c0:hover {
  background: #00beca;
}

<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        «
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link  c0"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        ‹
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link  c0"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 3"
        className="link  c0"
        color="red"
        href="example.com/page/3"
        onClick={[Function]}
        target="_self"
      >
        3
      </a>
    </li>
    <li
      className="item  item--disabled item--page"
    >
      <span
        className="link"
      >
        4
      </span>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 6"
        className="link  c0"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        6
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        ›
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link  c0"
        color="red"
        href="example.com/page/6"
        onClick={[Function]}
        target="_self"
      >
        »
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly in minimalist form 1`] = `
.c0 {
  display: inline-block;
  padding: 16px 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 30px;
  cursor: point;
  background-color: #f04257;
  background: #f04257;
  color: #FFFFFF;
}

.c0:hover {
  background: #00beca;
}

<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link  c0"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        2
      </a>
    </li>
    <li
      className="item  item--disabled item--page"
    >
      <span
        className="link"
      >
        3
      </span>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link  c0"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        5
      </a>
    </li>
  </ul>
</div>
`;

exports[`renders correctly with custom labels 1`] = `
.c0 {
  display: inline-block;
  padding: 16px 30px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  border-radius: 30px;
  cursor: point;
  background-color: #f04257;
  background: #f04257;
  color: #FFFFFF;
}

.c0:hover {
  background: #00beca;
}

<div
  className=""
>
  <ul
    className="list"
  >
    <li
      className="item   item--firstPage"
    >
      <a
        aria-label="First page"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        First
      </a>
    </li>
    <li
      className="item   item--previousPage"
    >
      <a
        aria-label="Previous page"
        className="link  c0"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        Previous
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 1"
        className="link  c0"
        color="red"
        href="example.com/page/1"
        onClick={[Function]}
        target="_self"
      >
        Page 1
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 2"
        className="link  c0"
        color="red"
        href="example.com/page/2"
        onClick={[Function]}
        target="_self"
      >
        Page 2
      </a>
    </li>
    <li
      className="item  item--disabled item--page"
    >
      <span
        className="link"
      >
        Page 3
      </span>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 4"
        className="link  c0"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        Page 4
      </a>
    </li>
    <li
      className="item   item--page"
    >
      <a
        aria-label="Page 5"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        Page 5
      </a>
    </li>
    <li
      className="item   item--nextPage"
    >
      <a
        aria-label="Next page"
        className="link  c0"
        color="red"
        href="example.com/page/4"
        onClick={[Function]}
        target="_self"
      >
        Next
      </a>
    </li>
    <li
      className="item   item--lastPage"
    >
      <a
        aria-label="Last page"
        className="link  c0"
        color="red"
        href="example.com/page/5"
        onClick={[Function]}
        target="_self"
      >
        Last
      </a>
    </li>
  </ul>
</div>
`;
